--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Velkommen til tidenes fetesteste nettside.
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/global.css">
+    <title>Elvebakken Realfag</title>
+</head>
+<body>
+    <header>
+        <h1>Elvebakken Realfag</h1>
+    </header>
+    <!-- meny over de forskjellige realfagene -->
+</body>
+</html>
