--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
         <h1>Elvebakken Realfag</h1>
     </header>
+    <main>
+        <!-- meny -->
+    </main>
     <!-- meny over de forskjellige realfagene -->
 </body>
 </html>
