--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
         <h1>Elvebakken Realfag</h1>
     </header>
     <main>
-        <!-- meny -->
+        <!-- meny over programfagene-->
+         <div id="fag_meny">
+            <div>
+                <img src="assets/imgs/test_img.jpg" alt="test bilde">
+                <p>Testfag</p>
+            </div>
+            <div>
+                <img src="assets/imgs/test_img.jpg" alt="test bilde">
+                <p>Testfag</p>
+            </div>
+            <div>
+                <img src="assets/imgs/test_img.jpg" alt="test bilde">
+                <p>Testfag</p>
+            </div>
+         </div>
     </main>
     <!-- meny over de forskjellige realfagene -->
 </body>
