Fikset litt idé til oppsett på main
La til bakgrunnsfarge og overskrift

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Elvebakken Realfag</h1>
+        <div id="forside"><h1>Elvebakken Realfag</h1></div>
     </header>
     <main>
+        <p>Test-tekst</p>
         <!-- meny -->
     </main>
     <!-- meny over de forskjellige realfagene -->
