Utforming av boksne/lenkene til programfagene
La til en pil som flytter seg, gjorde dem om til lenker, gjorde at de gikk ut av skjermen og justerte padding osv. for å få helt greie bokser

--- a/index.html
+++ b/index.html
@@ -13,18 +13,66 @@
     <main>
         <!-- meny over programfagene-->
          <div id="fag_meny">
-            <div>
-                <img src="assets/imgs/test_img.jpg" alt="test bilde">
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
                 <p>Testfag</p>
-            </div>
-            <div>
-                <img src="assets/imgs/test_img.jpg" alt="test bilde">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
                 <p>Testfag</p>
-            </div>
-            <div>
-                <img src="assets/imgs/test_img.jpg" alt="test bilde">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
                 <p>Testfag</p>
-            </div>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
+                <p>Testfag</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
          </div>
     </main>
     <!-- meny over de forskjellige realfagene -->
