Gjorde det mulig å scrolle elementet, og la til to simple knapper for å flytte seg. Fortsatt problemer med at programmet stopper brukeren i å ble for langt til høyre.

--- a/index.html
+++ b/index.html
@@ -14,67 +14,89 @@
         <!-- meny over programfagene-->
          <div id="fag_meny">
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 1</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 2</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 3</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 4</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 5</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 6</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 7</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 8</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 9</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 10</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 11</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
             <a href="#">
-                <img src="assets/imgs/test_img.jpg" alt="test bilde" class="fag_bilde">
-                <p>Testfag</p>
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 12</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 13</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 14</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 15</p>
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+            </a>
+            <a href="#">
+                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                <p>Testfag 16</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
          </div>
+         <button id="venstre_fag_meny_knapp" class="fag_meny_knapp" onclick="flyttMeny('venstre')">Venstre</button>
+         <button id="venstre_fag_meny_knapp" class="fag_meny_knapp" onclick="flyttMeny('høyre')">Høyre</button>
     </main>
-    <!-- meny over de forskjellige realfagene -->
+    <script src="script/global.js"></script>
 </body>
 </html>
