Fungerende meny om man ikke scroller manuelt
Pilene som man kan bruke til å scrolle er der fortsatt konstant, og om man scroller til siden manuelt, for så å bruke knappene, vil det ikke fungere. Ellers fungerer menyen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Elvebakken Realfag</h1>
     </header>
     <main>
+        <p>test</p>
         <!-- meny over programfagene-->
          <div id="fag_meny">
             <a href="#">
@@ -96,6 +97,7 @@
          </div>
          <button id="venstre_fag_meny_knapp" class="fag_meny_knapp" onclick="flyttMeny('venstre')">Venstre</button>
          <button id="venstre_fag_meny_knapp" class="fag_meny_knapp" onclick="flyttMeny('høyre')">Høyre</button>
+         <p>test</p>
     </main>
     <script src="script/global.js"></script>
 </body>
