Fikset forside-bilde
Bilde lagt til og fontstørrelse endret

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div id="forside"><h1>Elvebakken Realfag</h1></div>
+        <div id="forside"><h1>ELVEBAKKEN REALFAG</h1></div>
     </header>
     <main>
         <p>Test-tekst</p>
