Fikset font og knapp ned
Knapp lagt til, font endret

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <header>
-        <div id="forside"><h1>ELVEBAKKEN REALFAG</h1></div>
+        <div id="forside">
+            <h1>Elvebakken realfag</h1>
+            <a href="#plassholder" id="knapp">ned</a>
+        </div>
     </header>
     <main>
         <p>Test-tekst</p>
+        <div id="plassholder">Plassholder</p>
         <!-- meny -->
     </main>
     <!-- meny over de forskjellige realfagene -->
+    <script src="./script/global.js"></script>
 </body>
 </html>
