--- a/index.html
+++ b/index.html
@@ -14,82 +14,83 @@
         <p>test</p>
         <!-- meny over programfagene-->
          <div id="fag_meny">
-            <a href="#">
+            <!-- om antall fag endres, må også css endres (grid_template_columns) -->
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 1</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 2</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 3</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 4</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 5</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 6</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 7</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 8</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 9</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 10</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 11</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 12</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 13</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 14</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 15</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
             </a>
-            <a href="#">
+            <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 16</p>
                 <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
