La til in info om fagene overview
Alt er placeholder (imgs, descriptions etc)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/forside.css">
     <title>Elvebakken Realfag</title>
 </head>
 <body>
@@ -14,11 +15,67 @@
         </div>
     </header>
     <main>
-        <p>Test-tekst</p>
         <div id="plassholder">Plassholder</p>
         <!-- meny -->
+        <!-- meny over de forskjellige realfagene -->
+        <!-- Rask oversikt over realfagene -->
+        <div id="fag-oversikt">
+            <div class = "fag-element">
+                <img src="assets/imgs/placeholder_IT.png" class="fag-bilde">
+                <div class = "fag-info">
+                    <h3 class="fag-tittel">IT</h3>
+                    <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
+                    <p class="fag-sitat">"Beste shitten ever!" - Mann Med Langt Navn 2STD</p>
+                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Fysikk</h3>
+                    <p class="fag-beskrivelse">Fysikk på Elvebakken gir deg innsikt i alt fra kvantefysikk til astrofysikk. Du vil lære om de grunnleggende prinsippene som styrer universet og få muligheten til å utforske spennende eksperimenter.</p>
+                    <p class="fag-sitat">"Fysikk er magi som fungerer!" - Dope Dame 3KDA</p>
+                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                </div>
+                <img src="assets/imgs/placeholder_fysikk.png" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="assets/imgs/placeholder_kjemi.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Kjemi</h3>
+                    <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
+                    <p class="fag-sitat">"Kjemi er som å lage magiske potions!" - Kul Type 1STC</p>
+                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Biologi</h3>
+                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-sitat">"Biologi er livets vitenskap!" - Smart Elev 2STA</p>
+                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                </div>
+                <img src="assets/imgs/placeholder_biologi.png" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="assets/imgs/placeholder_tekforsk.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Teknologi og forskningslære</h3>
+                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-sitat">"Tekforsk er bare det beste faget!" - Trym Bringsrud Fekjær 2STF</p>
+                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Geofag</h3>
+                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                </div>
+                <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
+            </div>
+        </div>
     </main>
     <!-- meny over de forskjellige realfagene -->
-    <script src="./script/global.js"></script>
 </body>
 </html>
