lagt til logo og endret ned-knapp
Lagt til logo i hjørnet og lagt til piler

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <div id="forside">
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <a href="#plassholder" id="knapp">ned</a>
+            <a href="#plassholder" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
         </div>
     </header>
     <main>
-        <p>Test-tekst</p>
         <div id="plassholder">Plassholder</p>
         <!-- meny -->
     </main>
