--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
     <header>
         <div id="forside">
-            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
+            <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <a href="#plassholder" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
+            <a href="#fag-oversikt" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
         </div>
     </header>
     <main>
-        <div id="plassholder">Plassholder</p>
         <!-- meny -->
         <!-- meny over de forskjellige realfagene -->
         <!-- Rask oversikt over realfagene -->
@@ -77,6 +76,7 @@
             </div>
         </div>
     </main>
+    <script src="./script/global.js"></script>
     <!-- meny over de forskjellige realfagene -->
 </body>
 </html>
