La til piler som skjuler seg når man ikke kan bruke dem
Pilene skjuler seg når de ikke kan brukes, og js koden trengs ikke endres lenger om man endrer noe i css.

Det som mangler er en knapp for å se alle fagene på en gang.

--- a/index.html
+++ b/index.html
@@ -13,92 +13,92 @@
     <main>
         <p>test</p>
         <!-- meny over programfagene-->
-         <div id="fag_meny">
+        <div id="fag_meny">
             <!-- om antall fag endres, må også css endres (grid_template_columns) -->
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 1</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 2</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 3</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 4</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 5</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 6</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 7</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 8</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 9</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 10</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 11</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 12</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 13</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 14</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 15</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
             <a href="#" class="fag_i_meny">
                 <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
                 <p>Testfag 16</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="pil">
+                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
             </a>
-         </div>
-         <button id="venstre_fag_meny_knapp" class="fag_meny_knapp" onclick="flyttMeny('venstre')">Venstre</button>
-         <button id="venstre_fag_meny_knapp" class="fag_meny_knapp" onclick="flyttMeny('høyre')">Høyre</button>
-         <p>test</p>
+            <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til venstre"></button>
+            <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til høyre"></button>
+        </div>
+        <p>test</p>
     </main>
     <script src="script/global.js"></script>
 </body>
