--- a/index.html
+++ b/index.html
@@ -12,95 +12,101 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <a href="#fag-oversikt" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
+            <a href="#fag_meny" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
         </div>
     </header>
     <main>
         <!-- meny over programfagene-->
-        <div id="fag_meny">
-            <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 1</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 2</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 3</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 4</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 5</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 6</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 7</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 8</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 9</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 10</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 11</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 12</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 13</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 14</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 15</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <a href="#" class="fag_i_meny">
-                <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                <p>Testfag 16</p>
-                <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-            </a>
-            <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til venstre"></button>
-            <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til høyre"></button>
+        <div id="fag-meny-område">
+            <div id="fag-meny-tittel">
+                <h1>Programfag</h1>
+                <p>Vis alle ></p>
+            </div>
+            <div id="fag_meny">
+                <!-- om antall fag endres, må også css endres (grid_template_columns) -->
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 1</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 2</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 3</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 4</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 5</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 6</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 7</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 8</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 9</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 10</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 11</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 12</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 13</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 14</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 15</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="#" class="fag_i_meny">
+                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
+                    <p>Testfag 16</p>
+                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til venstre"></button>
+                <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til høyre"></button>
+            </div>
         </div>
   
         <div id="fag-oversikt">
