Fikset skjuling av pil til høyre i menyen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <a href="#fag_meny" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
+            <a href="#fag-meny-område" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
         </div>
     </header>
     <main>
