Padding og overskrift endring
Programfag-tekst endret, og litt mer padding noen steder

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <a href="#fag_meny" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
+            <a href="#fag-meny-område" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
         </div>
     </header>
     <main>
         <!-- meny over programfagene-->
         <div id="fag-meny-område">
             <div id="fag-meny-tittel">
-                <h1>Programfag</h1>
+                <h1>Programfagsoversikt</h1>
                 <p>Vis alle ></p>
             </div>
             <div id="fag_meny">
