Fikset visning av hele menyen om gangen
Man kan nå bytte mellom å ha menyen på en rad, og at hele menyen vises. Bakgrunnsfargen er satt i kommentar, og det er lagt til en mindre aggresiv box-shadow (den gaml ligger i kommentar under)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="fag-meny-område">
             <div id="fag-meny-tittel">
                 <h1>Programfagsoversikt</h1>
-                <p>Vis alle ></p>
+                <p id="vis-alle">Vis alle ></p>
             </div>
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
