--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken-logo-hvit-e-2024-25.png" alt="Elvebakken-logo"></a>
             <h1>Elvebakken realfag</h1>
-            <a href="#fag-meny-område" id="knapp"><img src="./assets/imgs/blå_pil_kort.svg" alt="pil nedover"></a>
+            <div id="knapp"><a href="#fag-meny-område"></a></div>
         </div>
     </header>
     <main>
         <!-- meny over programfagene-->
         <div id="fag-meny-område">
             <div id="fag-meny-tittel">
-                <h1>Programfagsoversikt</h1>
+                <h1>Programfag</h1>
                 <p>Vis alle ></p>
             </div>
             <div id="fag_meny">
@@ -104,8 +104,8 @@
                     <p>Testfag 16</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til venstre"></button>
-                <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"><img src="/assets/imgs/sort_pil_kort.svg" alt="pil for å bla til høyre"></button>
+                <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
+                <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
             </div>
         </div>
   
