--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <h3 class="fag-tittel">IT</h3>
                     <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
                     <p class="fag-sitat">"Beste shitten ever!" - Mann Med Langt Navn 2STD</p>
-                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                    <a class ="fag-se-mer-knapp" href="programfag/it/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -129,7 +129,7 @@
                     <h3 class="fag-tittel">Fysikk</h3>
                     <p class="fag-beskrivelse">Fysikk på Elvebakken gir deg innsikt i alt fra kvantefysikk til astrofysikk. Du vil lære om de grunnleggende prinsippene som styrer universet og få muligheten til å utforske spennende eksperimenter.</p>
                     <p class="fag-sitat">"Fysikk er magi som fungerer!" - Dope Dame 3KDA</p>
-                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                    <a class ="fag-se-mer-knapp" href="programfag/fysikk/">Se mer →</a>
                 </div>
                 <img src="assets/imgs/placeholder_fysikk.png" class="fag-bilde">
             </div>
@@ -139,7 +139,7 @@
                     <h3 class="fag-tittel">Kjemi</h3>
                     <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
                     <p class="fag-sitat">"Kjemi er som å lage magiske potions!" - Kul Type 1STC</p>
-                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                    <a class ="fag-se-mer-knapp" href="programfag/kjemi/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -147,7 +147,7 @@
                     <h3 class="fag-tittel">Biologi</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Biologi er livets vitenskap!" - Smart Elev 2STA</p>
-                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                    <a class ="fag-se-mer-knapp" href="programfag/biologi/">Se mer →</a>
                 </div>
                 <img src="assets/imgs/placeholder_biologi.png" class="fag-bilde">
             </div>
@@ -157,7 +157,7 @@
                     <h3 class="fag-tittel">Teknologi og forskningslære</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Tekforsk er bare det beste faget!" - Trym Bringsrud Fekjær 2STF</p>
-                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                    <a class ="fag-se-mer-knapp" href="programfag/tekforsk/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -165,7 +165,25 @@
                     <h3 class="fag-tittel">Geofag</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
-                    <button class ="fag-se-mer-knapp">Se mer →</button>
+                    <a class ="fag-se-mer-knapp" href="programfag/geofag/">Se mer →</a>
+                </div>
+                <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">S matte</h3>
+                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <a class ="fag-se-mer-knapp" href="programfag/s_matte/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">R matte</h3>
+                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
+                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <a class ="fag-se-mer-knapp" href="programfag/r_matte/">Se mer →</a>
                 </div>
                 <img src="assets/imgs/placeholder_geofag.png" class="fag-bilde">
             </div>
