Linker går nå til riktig fag

--- a/index.html
+++ b/index.html
@@ -24,84 +24,44 @@
             </div>
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 1</p>
+                <a href="programfag/informasjonsteknologi/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_IT.png" alt="test bilde" class="fag_bilde">
+                    <p>Informasjonsteknologi</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 2</p>
+                <a href="programfag/fysikk/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
+                    <p>Fysikk</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 3</p>
+                <a href="programfag/biologi/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_biologi.png" alt="test bilde" class="fag_bilde">
+                    <p>Biologi</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 4</p>
+                <a href="programfag/s_matte/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
+                    <p>S-Matte</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 5</p>
+                <a href="programfag/r_matte/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_fysikk.png" alt="test bilde" class="fag_bilde">
+                    <p>R-Matte</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 6</p>
+                <a href="programfag/kjemi/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_kjemi.png" alt="test bilde" class="fag_bilde">
+                    <p>Kjemi</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 7</p>
+                <a href="programfag/tekforsk/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_tekforsk.png" alt="test bilde" class="fag_bilde">
+                    <p>Tekforsk</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 8</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 9</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 10</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 11</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 12</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 13</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 14</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 15</p>
-                    <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
-                </a>
-                <a href="#" class="fag_i_meny">
-                    <img src="assets/imgs/lilla_bakgrunn.png" alt="test bilde" class="fag_bilde">
-                    <p>Testfag 16</p>
+                <a href="programfag/geofag/" class="fag_i_meny">
+                    <img src="assets/imgs/placeholder_geofag.png" alt="test bilde" class="fag_bilde">
+                    <p>Geofag</p>
                     <img src="assets/imgs/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
@@ -121,7 +81,7 @@
                     <h3 class="fag-tittel">IT</h3>
                     <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
                     <p class="fag-sitat">"Beste shitten ever!" - Mann Med Langt Navn 2STD</p>
-                    <a class ="fag-se-mer-knapp" href="programfag/it/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="programfag/informasjonsteknologi/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
